--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Messenger App</title>
-  <style>
+  <!-- <style>
     body {
       margin: 0;
       padding: 0;
@@ -28,7 +28,7 @@
       object-fit: contain;
       display: block;
     }
-  </style>
+  </style> -->
 </head>
 <body>
   <div id="root"></div>
